--- a/FUENTE/HTML/resgistro.html
+++ b/FUENTE/HTML/resgistro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/FUENTE/CSS/login.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
             <article class="contenido-formulario">
                 <header>
                     Registro
-                    <a href="/index.html"><img src="/iconos/salida.svg" alt="" class="salida"></a>
+                    <a href="/FUENTE/index.html"><img src="/FUENTE/ICONOS/salida.svg" alt="" class="salida"></a>
                 </header>
                 <form action="#">
                     <section class="campo">
@@ -39,7 +39,7 @@
                 </form>
 
                 <section class="enlace-formulario">
-                    <p>¿Ya tienes una cuenta? <a href="/html/login.html" >Iniciar sesión</a></p>
+                    <p>¿Ya tienes una cuenta? <a href="/FUENTE/HTML/login.html" >Iniciar sesión</a></p>
                 </section>
             </article>
 
@@ -47,14 +47,14 @@
 
             <section class="opciones-media">
                 <a href="#" class="campo">
-                    <img src="/iconos/twitter-2.svg" alt="">
+                    <img src="/FUENTE/ICONOS/twitter-2.svg" alt="">
                     <p>Registrarse con Facebook</p>
                 </a>
             </section>
 
             <section class="opciones-media">
                 <a href="#" class="campo">
-                    <img src="/iconos/Google.svg" alt="">
+                    <img src="/FUENTE/ICONOS/Google.svg" alt="">
                     <p>Registrarse con Google</p>
                 </a>
             </section>
