--- a/FUENTE/index.html
+++ b/FUENTE/index.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/menuPrincipal.css">
-    <link rel="stylesheet" href="/css/carrusel.css">
-    <link rel="stylesheet" href="/css/tarjetas.css">
-    <link rel="stylesheet" href="/css/footer.css">
-    <script src="/js/menuPrincipal.js" defer></script>
-    <script src="/js/carrusel.js" defer></script>
-    <script src="/js/tarjetas.js" defer></script>
-    <script src="/js/tarjetas2.js" defer></script>
+    <link rel="stylesheet" href="/FUENTE/CSS/menuPrincipal.css">
+    <link rel="stylesheet" href="/FUENTE/CSS/carrusel.css">
+    <link rel="stylesheet" href="/FUENTE/CSS/tarjetas.css">
+    <link rel="stylesheet" href="/FUENTE/CSS/footer.css">
+    <script src="/FUENTE/JS/menuPrincipal.js" defer></script>
+    <script src="/FUENTE/JS/carrusel.js" defer></script>
+    <script src="/FUENTE/JS/tarjetas.js" defer></script>
+    <script src="/FUENTE/JS/tarjetas2.js" defer></script>
 </head>
 
 <body>
     <nav class="menu">
         <section class="contenedor_del_menu">
             <section class="hamburguesa_del_menu">
-                <img src="iconos/menuPequeño.svg" class="menu__img">
+                <img src="/FUENTE/ICONOS/menuPequeño.svg" class="menu__img">
             </section>
             <section class="logo_del_menu">
-                <a href="/index.html">
-                    <img src="/img/logo.png" alt="logo web">
+                <a href="/FUENTE/index.html">
+                    <img src="/FUENTE/IMG/logo.png" alt="logo web">
                     <h1>Game Pulse</h1>
                 </a>
             </section>
 
             <ul class="enlaces_del_menu">
                 <li id="ordenadores" class="elemento_del_menu elemento_del_menu--mostrar">
-                    <a href="#" class="enlace_del_menu">Ordenadores <img src="iconos/flechaArriba.svg"
+                    <a href="#" class="enlace_del_menu">Ordenadores <img src="/FUENTE/ICONOS/flechaArriba.svg"
                             class="flecha_del_menu"></a>
 
                     <ul class="anidamiento_del_menu">
@@ -49,7 +49,7 @@
                 </li>
 
                 <li id="consolas" class="elemento_del_menu elemento_del_menu--mostrar">
-                    <a href="#" class="enlace_del_menu">Consolas <img src="iconos/flechaArriba.svg"
+                    <a href="#" class="enlace_del_menu">Consolas <img src="/FUENTE/ICONOS/flechaArriba.svg"
                             class="flecha_del_menu"></a>
 
                     <ul class="anidamiento_del_menu">
@@ -66,7 +66,7 @@
                 </li>
 
                 <li id="perifericos" class="elemento_del_menu elemento_del_menu--mostrar">
-                    <a href="#" class="enlace_del_menu">Periféricos <img src="iconos/flechaArriba.svg"
+                    <a href="#" class="enlace_del_menu">Periféricos <img src="/FUENTE/ICONOS/flechaArriba.svg"
                             class="flecha_del_menu"></a>
 
                     <ul class="anidamiento_del_menu">
@@ -89,8 +89,8 @@
                 </li>
             </ul>
             <section class="iconos">
-                <a href="/html/login.html"><img src="/iconos/perfil.svg" alt="icono perfil"></a>
-                <a href=""><img src="/iconos/carrito.svg" alt="carrito"></a>
+                <a href="/FUENTE/HTML/login.html"><img src="/FUENTE/ICONOS/perfil.svg" alt="icono perfil"></a>
+                <a href=""><img src="/FUENTE/ICONOS/carrito.svg" alt="carrito"></a>
             </section>
         </section>
     </nav>
@@ -98,19 +98,19 @@
     <section class="contenedor-carrusel">
         <section class="carrusel" id="carrusel">
             <article class="imagenes">
-                <img src="/img/resident-evil-4.jpg" alt="">
+                <img src="/FUENTE/IMG/resident-evil-4.jpg" alt="">
             </article>
 
             <article class="imagenes">
-                <img src="/img/Skulls_and_bones_grande.jpg" alt="">
+                <img src="/FUENTE/IMG/Skulls_and_bones_grande.jpg" alt="">
             </article>
 
             <article class="imagenes">
-                <img src="/img/Prince-persia-grande.jpg" alt="">
+                <img src="/FUENTE/IMG/Prince-persia-grande.jpg" alt="">
             </article>
 
             <article class="imagenes">
-                <img src="/img/Starfield-grande.jpg" alt="">
+                <img src="/FUENTE/IMG/Starfield-grande.jpg" alt="">
             </article>
 
         </section>
@@ -236,13 +236,13 @@
         <section class="contenedor-tarjetas_2">
             <h1>Lo mas vendidos del mes</h1>
             <section id="izquierda" class="flecha_2_izquierda flecha_2">
-                <img src="iconos/flecha-izquierda.svg" alt="">
+                <img src="ICONOS/flecha-izquierda.svg" alt="">
             </section>
 
             <ul class="tarjetas_2">
                 <li class="tarjeta_2">
                     <section class="img">
-                        <a href=""><img src="img/asus-rog-flow-X16.jpg" alt="asus-rog-flow-X16"></a>
+                        <a href=""><img src="IMG/asus-rog-flow-X16.jpg" alt="asus-rog-flow-X16"></a>
                     </section>
                     <section class="info">
                         <p>Asus Rog Flow X16</p>
@@ -252,7 +252,7 @@
 
                 <li class="tarjeta_2">
                     <section class="img">
-                        <a href=""><img src="img/lords-of-the-fallen.jpg" alt="lords-of-the-fallen"></a>
+                        <a href=""><img src="IMG/lords-of-the-fallen.jpg" alt="lords-of-the-fallen"></a>
                     </section>
                     <section class="info">
                         <p>Lords Of The Fallen</p>
@@ -262,7 +262,7 @@
 
                 <li class="tarjeta_2">
                     <section class="img">
-                        <a href=""><img src="img/razer-kraken-x-hero.jpg" alt="razer-kraken-x-hero"></a>
+                        <a href=""><img src="IMG/razer-kraken-x-hero.jpg" alt="razer-kraken-x-hero"></a>
                     </section>
                     <section class="info">
                         <p>Razer Kraken X Hero</p>
@@ -272,7 +272,7 @@
 
                 <li class="tarjeta_2">
                     <section class="img">
-                        <a href=""><img src="img/super-mario-bros-wonder.jpg" alt="super-mario-bros-wonder"></a>
+                        <a href=""><img src="IMG/super-mario-bros-wonder.jpg" alt="super-mario-bros-wonder"></a>
                     </section>
                     <section class="info">
                         <p>Super Mario Bros Wonder</p>
@@ -282,7 +282,7 @@
 
                 <li class="tarjeta_2">
                     <section class="img">
-                        <a href=""><img src="img/ps5-2.webp" alt="Ps5"></a>
+                        <a href=""><img src="IMG/ps5-2.webp" alt="Ps5"></a>
                     </section>
                     <section class="info">
                         <p>PS5 + 2 Juegos</p>
@@ -292,7 +292,7 @@
 
                 <li class="tarjeta_2">
                     <section class="img">
-                        <a href=""><img src="img/steam-gift-card.jpg" alt="steam-gift-card"></a>
+                        <a href=""><img src="IMG/steam-gift-card.jpg" alt="steam-gift-card"></a>
                     </section>
                     <section class="info">
                         <p>Steam Gift Card</p>
@@ -302,7 +302,7 @@
 
                 <li class="tarjeta_2">
                     <section class="img">
-                        <a href=""><img src="img/ea-sports-fc-24-12000-fc-pointsr.jpg" alt="fifa-points"></a>
+                        <a href=""><img src="IMG/ea-sports-fc-24-12000-fc-pointsr.jpg" alt="fifa-points"></a>
                     </section>
                     <section class="info">
                         <p>Fifa Points</p>
@@ -312,7 +312,7 @@
 
                 <li class="tarjeta_2">
                     <section class="img">
-                        <a href=""><img src="img/forgeon-Acrus.jpg" alt="forgeon-Acrus"></a>
+                        <a href=""><img src="IMG/forgeon-Acrus.jpg" alt="forgeon-Acrus"></a>
                     </section>
                     <section class="info">
                         <p>Forgeon Acrus</p>
@@ -322,7 +322,7 @@
 
                 <li class="tarjeta_2">
                     <section class="img">
-                        <a href=""><img src="img/PayStore-Card.jpg" alt="playStore-card"></a>
+                        <a href=""><img src="IMG/PayStore-Card.jpg" alt="playStore-card"></a>
                     </section>
                     <section class="info">
                         <p>PlayStore Card</p>
@@ -332,7 +332,7 @@
 
                 <li class="tarjeta_2">
                     <section class="img">
-                        <a href=""><img src="img/fortnite-pack-de-leyendas.jpg" alt="fortnite-pack-de-leyendas"></a>
+                        <a href=""><img src="IMG/fortnite-pack-de-leyendas.jpg" alt="fortnite-pack-de-leyendas"></a>
                     </section>
                     <section class="info">
                         <p>Fortnite Pack Leyendas</p>
@@ -344,7 +344,7 @@
 
 
             <section id="derecha" class="flecha_2_derecha flecha_2">
-                <img src="iconos/flecha-derecha.svg" alt="">
+                <img src="ICONOS/flecha-derecha.svg" alt="">
             </section>
 
         </section>
@@ -358,12 +358,12 @@
                 <h1>Informacion Contactos</h1>
 
                 <section class="contacto">
-                    <img src="/iconos/movil.svg" alt="movil">
+                    <img src="ICONOS/movil.svg" alt="movil">
                     <p>667-89-57-84</p>
                 </section>
 
                 <section class="contacto">
-                    <img src="/iconos/correo.svg" alt="correo">
+                    <img src="ICONOS/correo.svg" alt="correo">
                     <p>Gamepulse@gmail.com</p>
                 </section>
             </section>
@@ -381,16 +381,16 @@
                 <h1>Redes Sociales</h1>
                 <section class="contenedor-redes">
                     <section class="redes">
-                        <a href=""><img src="/iconos/instagram.svg" alt="instagram"></a>
+                        <a href=""><img src="ICONOS/instagram.svg" alt="instagram"></a>
                     </section>
                     <section class="redes">
-                        <a href=""><img src="/iconos/twitter.svg" alt="twitter"></a>
+                        <a href=""><img src="ICONOS/twitter.svg" alt="twitter"></a>
                     </section>
                     <section class="redes">
-                        <a href=""><img src="/iconos/facebook.svg" alt="facebook"></a>
+                        <a href=""><img src="ICONOS/facebook.svg" alt="facebook"></a>
                     </section>
                     <section class="redes">
-                        <a href=""><img src="/iconos/tiktok.svg" alt="tiktok"></a>
+                        <a href=""><img src="ICONOS/tiktok.svg" alt="tiktok"></a>
                     </section>
                 </section>
             </section>
