--- a/FUENTE/HTML/login.html
+++ b/FUENTE/HTML/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de sesión </title>
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/FUENTE/CSS/login.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
             <article class="contenido-formulario">
                 <header>
                     Iniciar sesión
-                    <a href="/index.html"><img src="/iconos/salida.svg" alt="" class="salida"></a>
+                    <a href="/FUENTE/index.html"><img src="/FUENTE/ICONOS/salida.svg" alt="" class="salida"></a>
                 </header>
                 <form action="#">
                     <section class="campo">
@@ -36,7 +36,7 @@
                 </form>
 
                 <section class="enlace-formulario">
-                    <p>¿No tienes una cuenta? <a href="/html/resgistro.html">Regístrate</a></p>
+                    <p>¿No tienes una cuenta? <a href="/FUENTE/HTML/resgistro.html">Regístrate</a></p>
                 </section>
             </article>
 
@@ -44,14 +44,14 @@
 
             <section class="opciones-media">
                 <a href="#" class="campo">
-                    <img src="/iconos/twitter-2.svg" alt="">
+                    <img src="/FUENTE/ICONOS/twitter-2.svg" alt="">
                     <p>Iniciar sesión con Facebook</p>
                 </a>
             </section>
 
             <section class="opciones-media">
                 <a href="#" class="campo">
-                    <img src="/iconos/Google.svg" alt="">
+                    <img src="/FUENTE/ICONOS/Google.svg" alt="">
                     <p>Iniciar sesión con Google</p>
                 </a>
             </section>
