algunos cambios nuevos

--- a/FUENTE/index.html
+++ b/FUENTE/index.html
@@ -242,11 +242,11 @@
             <ul class="tarjetas_2">
                 <li class="tarjeta_2">
                     <section class="img">
-                        <a href=""><img src="IMG/asus-rog-flow-X16.jpg" alt="asus-rog-flow-X16"></a>
+                        <a href=""><img src="IMG/tarjeta-de-saldo-blizzard.jpg" alt="tarjeta-de-saldo-blizzard"></a>
                     </section>
                     <section class="info">
-                        <p>Asus Rog Flow X16</p>
-                        <p>2334€</p>
+                        <p>Tarjeta Saldo Blizzard</p>
+                        <p>46€</p>
                     </section>
                 </li>
 
@@ -262,11 +262,11 @@
 
                 <li class="tarjeta_2">
                     <section class="img">
-                        <a href=""><img src="IMG/razer-kraken-x-hero.jpg" alt="razer-kraken-x-hero"></a>
+                        <a href=""><img src="IMG/tarjeta-nintendo-eshop.jpg" alt="tarjeta-nintendo-eshop"></a>
                     </section>
                     <section class="info">
-                        <p>Razer Kraken X Hero</p>
-                        <p>67€</p>
+                        <p>Tarjeta Nintendo eShop</p>
+                        <p>46€</p>
                     </section>
                 </li>
 
@@ -282,11 +282,11 @@
 
                 <li class="tarjeta_2">
                     <section class="img">
-                        <a href=""><img src="IMG/ps5-2.webp" alt="Ps5"></a>
+                        <a href=""><img src="IMG/xbox-game-pass.jpg" alt="xbox-game-pass"></a>
                     </section>
                     <section class="info">
-                        <p>PS5 + 2 Juegos</p>
-                        <p>480€</p>
+                        <p>Xbox Game Pass PC 3 meses</p>
+                        <p>22€</p>
                     </section>
                 </li>
 
